# 1d-array-of-structures

./: CMakeLists.txt  CMakePresets.json  README.md
include/: menu.h  student.h  utils.h
src/: main.cpp  menu.cpp  student.cpp  utils.cpp
